# kroeg

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: build-image.yml
backend/: Cargo.toml  Rocket.toml  diesel.toml  rustfmt.toml
backend/migrations/2023-05-24-192118_create_places/: down.sql  up.sql
backend/migrations/2023-09-20-194906_image_url/: down.sql  up.sql
backend/migrations/2024-05-19-112759_create_user_table/: up.sql
backend/migrations/2024-05-27-195702_add_visited_table/: up.sql
backend/migrations/2024-06-15-200626_make_visits_unique/: down.sql  up.sql
backend/migrations/2024-07-14-091228_add-area-table/: down.sql  up.sql
backend/migrations/2024-07-15-202915_add-address-line/: down.sql  up.sql
backend/migrations/2024-07-24-202215_add-gem-ams-id/: down.sql  up.sql
backend/migrations/2024-07-24-220939_bigint-gem-ams-id-column/: down.sql  up.sql
backend/requests/: areas.http  http-client.env.json  locations.http  session.http
backend/src/: db.rs  export_schemas.rs  img_proxy.rs  lib.rs  main.rs  models.rs  schema.rs  sql_types.rs
backend/src/db/: areas.rs  locations.rs  mod.rs  pgcrypto.rs  sql_types.rs  users.rs  visits.rs
backend/src/models/: areas.rs  config.rs  locations.rs  mod.rs  users.rs  visits.rs
backend/src/routes/: areas.rs  bars.rs  mod.rs  session.rs  visits.rs
backend/static/: index.html
data/: pyproject.toml
data/areas/: .gitignore  README.md  insert-areas.sql.j2  render_template.py
data/bars/: .gitignore  README.md  datasets.py  filters.py  gmaps.py  insert-bars.sql.j2  metadata_bars.json  models.py  reconcile.py  render_template.py
frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.mts
frontend/src/: App.svelte  app.html  main.ts
frontend/src/api/: areas.ts  bars.ts  base.ts  session.ts
frontend/src/lib/: BarItem.svelte  Checkmark.svelte  Externallink.svelte  LoginForm.svelte  MapBarItem.svelte  RegisterForm.svelte  ThemeSwitcher.svelte  pico-settings.css  stores.ts  time.ts
frontend/src/models/: schemas.ts
frontend/src/routes/: +layout.svelte  +page.svelte  Home.svelte  Login.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/map/: +page.svelte
frontend/src/routes/me/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/styles/: pico-customizations.css
scripts/: run_mypy.sh
