[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "export-schemas"
path = "src/export_schemas.rs"

[lib]
name = "kroeg"
path = "src/lib.rs"

[dependencies]
serde = "1.0.163"
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.4", features = ["diesel_postgres_pool"] }
diesel = { version = "2.1.4", features = ["postgres"] }
postgis_diesel = { version = "2.1.1", features = ["serde"] }
schemars = { version = "0.8.16" }
