[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "export-schemas"
path = "src/export_schemas.rs"

[lib]
name = "kroeg"
path = "src/lib.rs"

[dependencies]
serde = "1.0.202"
rocket = { version = "=0.5.0", features = ["json", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
postgis_diesel = { version = "2.3.1", features = ["serde"] }
schemars = { version = "0.8.20" }
chrono = { version = "0.4.38", features = ["serde"] }
